MORE-959: Services and some redesigns
